objects/SFDC_Org_Case_to_Marketo_Field_Mappings__c.object
<CustomObject>
    <fields>
        <fullName>SFDC_Field_API_Name__c</fullName>
        <label>SFDC Field API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sync_Blank_Values__c</fullName>
        <defaultValue>true</defaultValue>
        <description>When a value is changed from a value to blank, update the Marketo field value to null.</description>
        <inlineHelpText>When a value is changed from a value to blank, update the Marketo field value to null.</inlineHelpText>
        <label>Sync Blank Values</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sync_Field__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Sync Field</label>
        <type>Checkbox</type>
    </fields>
    <customSettingsType>List</customSettingsType>
    <label>SFDC Org Case to Marketo Field Mappings</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>SFDC_Field_API_Name__c</columns>
        <columns>Sync_Field__c</columns>
        <columns>Sync_Blank_Values__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>